[package]
name = "global-chat"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
textwrap = "0.16"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"